--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "svg-sprite-loader": "^4.2.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
